fixed video image on mobile for #536

--- a/css/recruiting-token.css
+++ b/css/recruiting-token.css
@@ -332,7 +332,7 @@ i.big-icon {
 }
 #videos-frontpage {
   text-align:center;
-  background: url('https://i.ytimg.com/vi_webp/AY-Sxu8Itsw/mqdefault.webp') center / cover;
+  background: url('https://i.ytimg.com/vi/AY-Sxu8Itsw/hqdefault.jpg') center / cover;
   margin-right: 0px;
   margin-left: 0px;
   margin-bottom: 48px;
